# ChessConsole

./: CMakeLists.txt  CMakePresets.json  bitboard.cpp  bitboard.h  chess.cpp  chess.h  chess_constants.h  pieces.h  square.h  utils.h  white_king.cpp  white_king.h
